--- a/mailx/src/assets/scss/globals/_main.scss
+++ b/mailx/src/assets/scss/globals/_main.scss
@@ -3,4 +3,5 @@ html, body {
     background-color: $almost-white;
     color: $almost-black;
     user-select: none;
+    font-family: 'Open Sans';
 }
