--- a/mailx/src/assets/scss/elements/_typography.scss
+++ b/mailx/src/assets/scss/elements/_typography.scss
@@ -1,1 +1,23 @@
 // Base Typography
+
+h1 {
+    font-size: 56px;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 46px;
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 36px;
+}
+
+h4 {
+    font-size: 26px;
+}
+
+p {
+    font-size: 18;
+}
