Add onboarding page

--- a/mailx/src/assets/scss/_base.scss
+++ b/mailx/src/assets/scss/_base.scss
@@ -4,4 +4,6 @@
 @import 'globals/variables';
 @import 'globals/fonts';
 @import 'globals/main';
+@import 'elements/typography';
+@import 'elements/button';
 @import 'components/base';
