--- a/mailx/src/app/components/onboarding/onboarding.component.html
+++ b/mailx/src/app/components/onboarding/onboarding.component.html
@@ -2,4 +2,8 @@
     <img src="assets/svg/mail.svg" class="onboarding__icon" />
     <h1 class="onboarding__title">Hey there!</h1>
     <span class="onboarding__subtitle">Welcome to your brand new inbox.</span>
+<br>
+    <button class="onboarding__action-button button__gradient button--is-large button--is-long" (click)="button()">
+        Get Started
+    </button>
 </div>
