--- a/mailx/src/assets/scss/components/onboarding/_onboarding.scss
+++ b/mailx/src/assets/scss/components/onboarding/_onboarding.scss
@@ -23,8 +23,12 @@
     }
 
     &__icon {
-        width: 300px;
+        width: 250px;
         margin-bottom: -4.5rem;
+    }
+
+    &__action-button {
+        margin-top: 3.5rem;
     }
 
 }
