Add create account UI

--- a/mailx/src/app/components/auth/register/register.component.html
+++ b/mailx/src/app/components/auth/register/register.component.html
@@ -1,1 +1,26 @@
-<p>register works!</p>
+<div class="container container--is-center">
+    <h1 class="register__title">Create Account</h1>
+    <p><span>Sync your accounts anywhere and everywhere.</span></p>
+
+    <div class="form form--is-column">
+        <div class="form__row">
+            <input type="text" class="input" placeholder="Username" />
+        </div>
+        <div class="form__row">
+            <input type="text" class="input" placeholder="Email Address" />
+        </div>
+        <div class="form__row">
+            <input type="password" class="input" placeholder="Password" />
+        </div>
+
+        <div class="form--button-group margin-top--xl">
+            <button class="button__grey margin-right--lg">Log In</button> <button class="button__primary">Register</button>
+        </div>
+    </div>
+
+    <div id="spacer" class="margin-top--xl margin-bot-lg">
+        <h2>OR</h2>
+    </div>
+
+    <a>Continue without an account.</a>
+</div>
