--- a/mailx/src/assets/scss/_base.scss
+++ b/mailx/src/assets/scss/_base.scss
@@ -6,4 +6,7 @@
 @import 'globals/main';
 @import 'elements/typography';
 @import 'elements/button';
+@import 'elements/containers';
+@import 'elements/forms';
+@import 'elements/margin';
 @import 'components/base';
