--- a/mailx/src/assets/scss/globals/_variables.scss
+++ b/mailx/src/assets/scss/globals/_variables.scss
@@ -8,3 +8,15 @@ $black: #000000;
 $grey: #6E6E6E;
 $almost-white: #F8F8F8;
 $white: #FFFFFF;
+$light: #E5E5E5;
+
+$error: #E22565;
+
+// Coefficients
+$color-coef: 2%;
+
+// Margins
+$mar: 1rem;
+$mar-lg: 2.5rem;
+$mar-sm: .5rem;
+$mar-xl: 3.5rem;
