--- a/mailx/src/app/components/onboarding/onboarding.component.html
+++ b/mailx/src/app/components/onboarding/onboarding.component.html
@@ -1,4 +1,4 @@
-<div class="onboarding__container">
+<div class="container container--is-center">
     <img src="assets/svg/mail.svg" class="onboarding__icon" />
     <h1 class="onboarding__title">Hey there!</h1>
     <span class="onboarding__subtitle">Welcome to your brand new inbox.</span>
