--- a/mailx/src/app/components/auth/register/register.component.html
+++ b/mailx/src/app/components/auth/register/register.component.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="form--button-group margin-top--xl">
-            <button class="button__grey margin-right--lg">Log In</button> <button class="button__primary">Register</button>
+            <button id="login-button" class="button__grey margin-right--lg" (click)="login()">Log In</button> <button id="register-button" class="button__primary">Register</button>
         </div>
     </div>
 
