--- a/mailx/src/app/components/auth/register/register.component.html
+++ b/mailx/src/app/components/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container container--is-center">
-    <h1 class="register__title">Create Account</h1>
+    <h1 class="auth__title">Create Account</h1>
     <p><span>Sync your accounts anywhere and everywhere.</span></p>
 
     <div class="form form--is-column">
