--- a/mailx/src/app/components/auth/login/login.component.html
+++ b/mailx/src/app/components/auth/login/login.component.html
@@ -3,10 +3,10 @@
     <p><span>Sign into your account and get back on track.</span></p>
 
     <div class="form form--is-column">
-        <div class="form__row">
+        <div class="form__item">
             <input type="text" class="input" placeholder="Username" />
         </div>
-        <div class="form__row">
+        <div class="form__item">
             <input type="password" class="input" placeholder="Password" />
         </div>
 
