--- a/mailx/src/assets/scss/elements/_forms.scss
+++ b/mailx/src/assets/scss/elements/_forms.scss
@@ -15,12 +15,18 @@
         justify-content: space-between;
     }
 
-    &__row {
+    &__item {
         margin: .5rem 0 .5rem 0;
     }
 }
 
 input {
+    &:focus {
+        outline: none;
+    }
+}
+
+input[type="text"], input[type="password"] {
     background-color: $light;
     height: 2.5rem;
     font-size: 1rem;
@@ -31,7 +37,6 @@ input {
     border: 1px solid transparent;
     
     &:focus {
-        outline: none;
         background-color: lighten($light, $color-coef);
         border: 1px solid $primary;
     }
@@ -44,5 +49,40 @@ input {
 
     &--has-error {
         border: 1px solid $error;
+    }
+
+    &__label {
+        font-size: 15px;
+    }
+
+    &__checkbox {
+        cursor: pointer;
+    }
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    height: 18px;
+    width: 18px;
+    border: 1px solid $grey;
+    border-radius: 50%;
+    background: transparent;
+    position: relative;
+    transition: 0.05s linear;
+    margin-top: 2px;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:checked {
+        border: 5px solid $primary;
+
+        &::before {
+            content: "";
+            height: 10px;
+            width: 10px;
+            display: block;
+        }
     }
 }
