--- a/mailx/src/assets/scss/_base.scss
+++ b/mailx/src/assets/scss/_base.scss
@@ -9,4 +9,5 @@
 @import 'elements/containers';
 @import 'elements/forms';
 @import 'elements/margin';
+@import 'elements/custom';
 @import 'components/base';
