Fix input class

--- a/mailx/src/assets/scss/elements/_forms.scss
+++ b/mailx/src/assets/scss/elements/_forms.scss
@@ -42,7 +42,7 @@ input[type="text"], input[type="password"] {
     }
 }
 
-input {
+.input {
     display: inline-block;
     width: 100%;
     box-sizing: border-box;
